# FFmpegDev

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ebrightmoon/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common-define.h  native-lib.cpp  native-lib.h  native-libback.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/media/: const.h  one_frame.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decode_state_cb.cpp  i_decode_state_cb.h  i_decoder.h
app/src/main/cpp/media/decoder/audio/: a_decoder.cpp  a_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/encoder/: base_encoder.cpp  base_encoder.h  i_encode_state_cb.h  i_encoder.h
app/src/main/cpp/media/encoder/audio/: a_encoder.cpp  a_encoder.h
app/src/main/cpp/media/encoder/video/: v_encoder.cpp  v_encoder.h
app/src/main/cpp/media/muxer/: ff_repack.cpp  ff_repack.h  i_muxer_cb.h  mp4_muxer.cpp  mp4_muxer.h
app/src/main/cpp/media/player/def_player/: player.cpp
app/src/main/cpp/media/player/gl_player/: gl_player.cpp
app/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
app/src/main/cpp/media/render/video/: video_render.h
app/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
app/src/main/cpp/media/render/video/opengl_render/: opengl_pixel_receiver.h  opengl_render.cpp  opengl_render.h
app/src/main/cpp/media/synthesizer/: synthesizer.cpp  synthesizer.h
app/src/main/cpp/opengl/drawer/: drawer.cpp  drawer.h  video_drawer.h
app/src/main/cpp/opengl/drawer/proxy/: def_drawer_proxy_impl.cpp  def_drawer_proxy_impl.h  drawer_proxy.h
app/src/main/cpp/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/utils/: common-define.h
app/src/main/java/com/ebrightmoon/ffmpeg/: FFmpegClient.java  MainActivity.java  NavRtspCallBack.java
app/src/main/java/com/ebrightmoon/ffmpeg/camera/: CameraActivity.java
app/src/main/java/com/ebrightmoon/ffmpeg/hplayer/: IDecoder.java  OnVideoSizeChangedListener.java
app/src/main/java/com/ebrightmoon/ffmpeg/player/: FFmpegPlayer.java  FFmpegPlayerActivity.java
app/src/main/java/com/ebrightmoon/ffmpeg/video/: MediaPlayerActivity.java  VideoActivity.java
app/src/main/java/com/ebrightmoon/ffmpeg/view/: PlayerView.java
app/src/main/res/layout/: activity_ffmpeg_player.xml  activity_main.xml  activity_media_player.xml  activity_video.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ebrightmoon/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
